--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
